--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <title>getElementById example</title>
+    <title>Weather world</title>
     <link rel="stylesheet" href="./main.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
@@ -14,30 +14,7 @@
     </div>
     <h1 id="cityName"></h1>
     <div class="container">
-      <div id="hour">
-        <!-- <div id="bir">
-          <h3>10:00</h3>
-          <h3>12-22</h3>
-          <h4>1°</h4>
-          <h3>Cludy</h3>
-          <img src="https://openweathermap.org/img/wn/01d@2x.png" alt="" />
-        </div>
-        <div id="bir">
-          <h3>10:00</h3>
-          <h3>12-22</h3>
-          <h4>1°</h4>
-          <h3>Cludy</h3>
-          <img src="https://openweathermap.org/img/wn/04d@2x.png" alt="" />
-        </div>
-        <div id="bir">
-          <h3>10:00</h3>
-          <h3>12-22</h3>
-          <h4>1°</h4>
-          <h3>Cludy</h3>
-          <img src="https://openweathermap.org/img/wn/50d@2x.png" alt="" />
-        </div>
-      </div> -->
-      </div>
+      <div id="hour"></div>
     </div>
     <div class="container">
       <div id="days"></div>
