--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
     <div class="inp">
       <label for="example"></label>
-      <input type="text" id="example" placeholder="shahar nomi: Parkent" />
+      <input type="text" id="example" placeholder="shahar nomi: Toshkent" />
       <button class="btn" onclick="start();">Qidirish</button><br />
     </div>
     <h1 id="cityName"></h1>
