revome div days

--- a/main.html
+++ b/main.html
@@ -16,9 +16,7 @@
     <div class="container">
       <div id="hour"></div>
     </div>
-    <div class="container">
-      <div id="days"></div>
-    </div>
+    <div class="container"></div>
     <script src="./java.js"></script>
   </body>
 </html>
