--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
     <div class="container">
       <div id="hour"></div>
     </div>
+    <div id="days"></div>
     <div class="container"></div>
     <script src="./java.js"></script>
   </body>
