--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <title>Weather world</title>
     <link rel="stylesheet" href="./main.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
